syntax = "proto3";

package ai.metathings.service.identityd2;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message PatchDomainRequest {
	reserved "name", "parent";

	google.protobuf.StringValue id = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue alias = 3;
	map<string, google.protobuf.StringValue> extra = 5;
}

message PatchDomainResponse {
	Domain domain = 1;
}
